--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made with_❤️_in the state of Washington :-)
   </footer>
 
 <script src="index.js" charset="utf-8"></script>
